# StockPricePrediction

./: .env.example  .gitignore  Makefile  README.md  diff2.txt  diff_predict.txt  patch_predict.py  patch_predict2.py  patch_predict3.py  patch_predict4.py  pyproject.toml  requirements.txt  requirements_working.txt  setup.py  temp.diff  temp_hist.txt  test_indicators.py  test_setup.py
config/: __init__.py  config.yaml  logging_config.yaml  sentiment_config.yaml
data/: portfolio.db
database/: schema.sql  schema_timescale.sql
docker/: Dockerfile.api  Dockerfile.frontend  docker-compose.yml  nginx.conf
docs/: API_SETUP_GUIDE.md
models/model_metadata/: feature_columns.json  lstm_AAPL_price_h15_20260425_191003.json  lstm_AAPL_price_h15_20260425_192001.json  lstm_AAPL_price_h15_20260425_232735.json  lstm_AAPL_price_h30_20260425_191015.json  lstm_AAPL_price_h30_20260425_192018.json  lstm_AAPL_price_h30_20260425_232739.json  lstm_AAPL_price_h60_20260425_191028.json  lstm_AAPL_price_h60_20260425_192034.json  lstm_AAPL_price_h7_20260425_190947.json  lstm_AAPL_price_h7_20260425_191945.json  lstm_AAPL_price_h7_20260425_232729.json  lstm_AMD_price_h30_20260425_233114.json  lstm_AMD_price_h60_20260425_233118.json  lstm_AMD_price_h7_20260425_233105.json  lstm_GOOGL_price_h60_20260425_235118.json  lstm_META_price_h15_20260425_175702.json  lstm_META_price_h15_20260425_175903.json  lstm_META_price_h15_20260425_180023.json  lstm_META_price_h15_20260425_192307.json  lstm_META_price_h15_20260425_193206.json  lstm_META_price_h15_20260425_231814.json  lstm_META_price_h30_20260425_175719.json  lstm_META_price_h30_20260425_175917.json  lstm_META_price_h30_20260425_180039.json  lstm_META_price_h30_20260425_192331.json  lstm_META_price_h30_20260425_193225.json  lstm_META_price_h30_20260425_231818.json  lstm_META_price_h60_20260425_175736.json  lstm_META_price_h60_20260425_175934.json  lstm_META_price_h60_20260425_180055.json  lstm_META_price_h60_20260425_192352.json  lstm_META_price_h60_20260425_193243.json  lstm_META_price_h7_20260425_175646.json  lstm_META_price_h7_20260425_175847.json  lstm_META_price_h7_20260425_180011.json  lstm_META_price_h7_20260425_192245.json  lstm_META_price_h7_20260425_193146.json  lstm_META_price_h7_20260425_231809.json  lstm_MSFT_price_h15_20260425_235325.json  (+123 more)
notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  03_model_development.ipynb  04_model_development.ipynb.ipynb
quantvision/: index.html  package-lock.json  package.json
quantvision/src/: App.jsx  index.css
scripts/: download_daily_data.py  migrate_sqlite_to_postgres.py  train_models.py
src/: __init__.py  dashboard.py  data_loader.py  defaults.py  feature_engineering.py  models.py  portfolio.py
src/agents/: __init__.py  agents.py  crew.py  tasks.py  tools.py
src/api/: main.py
src/backtesting/: __init__.py  backtest_engine.py  backtest_service.py
src/dashboard/: __init__.py  app.py  app_pro.py  app_v2.py  charts.py  heatmap.py  layout.py  signal_display.py  theme.py
src/data/: __init__.py  alpha_vantage_provider.py  data_acquisition.py  data_cache.py  data_loader.py  data_preprocessing.py  data_storage.py  data_validator.py  live_data.py  market_data.py
src/features/: __init__.py  candlestick_patterns.py  confluence.py  feature_engineering.py  pattern_detector.py  support_resistance.py  technical_indicators.py
src/models/: __init__.py  (+15 more)
tests/: conftest.py  test_api_keys.py  test_yfinance_freshness.py
(+3776 files in other folders)
