[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantvision"
version = "2.0.0"
description = "FastAPI and React workspace for stock analysis, forecasting, and portfolio research"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Academic/research use. No separate open-source license file is included." }
authors = [
    { name = "Tan Yee Hern" }
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.11",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "pytz>=2024.1",
    "pandas-market-calendars>=4.4",
    "cachetools>=5.3",
    "tqdm>=4.66",
    "joblib>=1.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "reportlab>=4.2",
    "yfinance>=0.2.54",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "streamlit>=1.32",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "torch>=2.2",
    "hmmlearn>=0.3.2",
    "optuna>=3.6",
    "shap>=0.45",
    "cvxpy>=1.4",
    "ta>=0.11",
    "crewai>=0.28",
    "langchain>=0.1",
    "langchain-anthropic>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "flake8>=7.0",
    "mypy>=1.10",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
    "jupyter>=1.0",
    "notebook>=7.0",
    "ipykernel>=6.29",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
